[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Hurtbox.gd" type="Script" id=1]

[node name="Hurtbox" type="Area2D"]
collision_layer = 2147483648
collision_mask = 2147483648
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Hurtbox_area_entered"]
[connection signal="invencibilidade_fim" from="." to="." method="_on_Hurtbox_invencibilidade_fim"]
[connection signal="invencibilidade_inicio" from="." to="." method="_on_Hurtbox_invencibilidade_inicio"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
